--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+*	Abbellisci l'avvio con la funzione di remindMe 
 *	Fai una funzione che checka se la grandezza delle righe è cambiata!
 *	Gestisci i case in processaChar
 *	Gestisci file .desktop per apertura terminale su un'altra istanza
